--- a/oformleniespiskov.html
+++ b/oformleniespiskov.html
@@ -7,12 +7,13 @@
 </head>
 <body>
     <div>
-        <h1 align="center">Нумерованный список</h1>
-        <L1>Принтер
-        <L1>Сканер
-        <L1>Монитор
+       <h1 align="center">Нумерованный список</h1>
+       <ol>
+        <Li>Принтер</Li>
+        <Li>Сканер</Li>
+        <Li>Монитор</Li>
     </div>
-</ul>
+</ol>
 </body>
 </html>
 
@@ -24,6 +25,23 @@
     <title>Списки</title>
 </head>
 <body>
-    
+    <div>
+        <h1 align="center">Маркированные списки</h1>
+        <ul type="circle">
+            <Li>Принтер</Li>
+            <Li>Сканер</Li>
+            <Li>Монитор</Li>
+        </ul>
+        <ul type="disc">
+            <Li>Принтер</Li>
+            <Li>Сканер</Li>
+            <Li>Монитор</Li>
+        </ul>
+        <ul type="square">
+            <Li>Принтер</Li>
+            <Li>Сканер</Li>
+            <Li>Монитор</Li>
+        </ul>
+    </div>
 </body>
 </html>
