--- a/oformleniespiskov.html
+++ b/oformleniespiskov.html
@@ -45,3 +45,27 @@
     </div>
 </body>
 </html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+<p>Задание 3</p>
+    <h1 align="center"><font color="00008B">Расписание уроков</font></h1>
+<ol align="center"> 
+    <div style="text-align: center; width: 100%">
+        <ol style="list-style-type: inside; display: inline-block">
+            <li style="text-align: left;">Математика</li>
+            <li style="text-align: left;"> Физика</li>
+            <li style="text-align: left;">Химия</li>
+            <li style="text-align: left;">История</li>
+            <li style="text-align: left;">Информатика</li>
+        </ol>
+    </div>
+</body>
+</html>
+
