--- a/oformleniespiskov.html
+++ b/oformleniespiskov.html
@@ -69,3 +69,32 @@
 </body>
 </html>
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>4 Number</title>
+    <style>
+        .work2{
+        background-color: #AFEEEE;
+        width: 270px; margin-left: auto; margin-right: 31%;
+        }
+    </style>
+</head>
+<body>
+    <div class="work2">
+    <h3><p align="center" style="color: navy;">Разделы математики</p></h3>
+    <H3 ALIGN=CENTER><font color="ff0000">Алгебра</font></H3>
+    <ul align="center" type="disc">
+        <li style="text-align: left;">Тригонометрия</li>
+        <li style="text-align: left;">Логприфмы</li>
+        <li style="text-align: left;">дроби</li>
+    </ul>
+    <h3><p align="center" style="color: red;">Геометрия</p></h3>
+    <ul align="center" type="disc">
+        <li style="text-align: left;">Планиметрия </li>
+        <li style="text-align: left;">Стереометрия </li>
+    </ul>
+</html>
+
