--- a/oformleniespiskov.html
+++ b/oformleniespiskov.html
@@ -76,14 +76,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>4 Number</title>
     <style>
-        .work2{
+        .n2{
         background-color: #AFEEEE;
         width: 270px; margin-left: auto; margin-right: 31%;
         }
     </style>
 </head>
 <body>
-    <div class="work2">
+    <div class="n2">
     <h3><p align="center" style="color: navy;">Разделы математики</p></h3>
     <H3 ALIGN=CENTER><font color="ff0000">Алгебра</font></H3>
     <ul align="center" type="disc">
@@ -95,6 +95,43 @@
     <ul align="center" type="disc">
         <li style="text-align: left;">Планиметрия </li>
         <li style="text-align: left;">Стереометрия </li>
-    </ul>
+     </ul>   
+    </div
 </html>
 
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>1 Number</title>
+    <style>
+        .n3{
+        background-color: #98FB98;
+        width: 270px; margin-left: 31%; margin-right: 31%;
+        }
+    </style>
+</head>
+<body >
+            <div class="n3">
+                <font color="red"> <H3 ALIGN=CENTER>Прикладные программы&para;</H3></font>
+                
+                <ol>
+        <li style="text-align: left;">Текстовые редакторы&para;</li>
+        <li style="text-align: left">Графические редакторы&para;</li>
+        <li  style="text-align: left">Электронные таблицы&para;</li>
+        <li  style="text-align: left">Система компьютерной математики&para;</li>
+        <ul type="DISC">
+        <li style="text-align: left;">&rarr;Mathematica&para;</li>
+        <li style="text-align: left;">&rarr;MathCad&para;</li> 
+        <li style="text-align: left;">&rarr;Maple &para;</li>
+    </ul>
+        </ol>
+        </div>
+</body>
+        </html
+
+
+        
