--- a/oformleniespiskov.html
+++ b/oformleniespiskov.html
@@ -78,7 +78,7 @@
     <style>
         .n2{
         background-color: #AFEEEE;
-        width: 270px; margin-left: auto; margin-right: 31%;
+        width: 270px; margin-left: auto; margin-right: auto;
         }
     </style>
 </head>
@@ -88,8 +88,8 @@
     <H3 ALIGN=CENTER><font color="ff0000">Алгебра</font></H3>
     <ul align="center" type="disc">
         <li style="text-align: left;">Тригонометрия</li>
-        <li style="text-align: left;">Логприфмы</li>
-        <li style="text-align: left;">дроби</li>
+        <li style="text-align: left;">Логарифмы</li>
+        <li style="text-align: left;">Дроби</li>
     </ul>
     <h3><p align="center" style="color: red;">Геометрия</p></h3>
     <ul align="center" type="disc">
@@ -106,32 +106,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1 Number</title>
+    <title>5</title>
     <style>
         .n3{
         background-color: #98FB98;
-        width: 270px; margin-left: 31%; margin-right: 31%;
+        width: 270px; margin-left: auto; margin-right: auto;
         }
     </style>
 </head>
 <body >
-            <div class="n3">
-                <font color="red"> <H3 ALIGN=CENTER>Прикладные программы&para;</H3></font>
-                
-                <ol>
-        <li style="text-align: left;">Текстовые редакторы&para;</li>
-        <li style="text-align: left">Графические редакторы&para;</li>
-        <li  style="text-align: left">Электронные таблицы&para;</li>
-        <li  style="text-align: left">Система компьютерной математики&para;</li>
-        <ul type="DISC">
-        <li style="text-align: left;">&rarr;Mathematica&para;</li>
-        <li style="text-align: left;">&rarr;MathCad&para;</li> 
-        <li style="text-align: left;">&rarr;Maple &para;</li>
-    </ul>
-        </ol>
-        </div>
+ <div class="n3">
+  <font color="red"> <H3 ALIGN=CENTER>Прикладные программы&para;</H3></font>
+   <ol>
+  <li style="text-align: left;">Текстовые редакторы&para;</li>
+ <li style="text-align: left">Графические редакторы&para;</li>
+ <li  style="text-align: left">Электронные таблицы&para;</li>
+  <li  style="text-align: left">Система компьютерной математики&para;</li>
+ <ul type="DISC">
+  <li style="text-align: left;">&rarr;Mathematica&para;</li>
+  <li style="text-align: left;">&rarr;MathCad&para;</li> 
+  <li style="text-align: left;" >&rarr;Maple &para;</li>
+</ul>
+ </ol>
+</div>
 </body>
-        </html
-
-
+ </html
         
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <title>6</title>
+ </head>
+ <body>
+     <div style="width: 200px; margin-left: auto; margin-right: auto; background-color: #FFFF00;">
+     <font color="red"> <H2 ALIGN=CENTER>Города Беларуси</H2></font>
+     <font color="blue"> <H3 ALIGN=CENTER>Витебская область</H3></font>
+     <ol type="A">
+         <li style="text-align: left; margin-left: 40px;">Витебск</li>
+     <li style="text-align: left; margin-left: 40px;">Полоцк</li>
+     </ol>
+     <font color="blue"> <H3 ALIGN=CENTER>Минская область</H3></font>
+     <ol type="I">
+         <li style="text-align: left; margin-left: 40px;">Минск</li>
+     <li style="text-align: left; margin-left: 40px;">Борисов</li>
+     </ol>
+     <font color="blue"> <H3 ALIGN=CENTER>Гродневская область</H3></font>
+     <ol type="a">
+     <li style="text-align: left; margin-left: 40px;">Гродно</li>
+     <li style="text-align: left; margin-left: 40px;">Лида</li>
+     </ol>
+     <font color="blue"> <H3 ALIGN=CENTER>Могилевская область</H3></font>
+     <ol>
+         <li style="text-align: left; margin-left: 40px;">Могилев</li>
+     <li style="text-align: left; margin-left: 40px;">Горки</li>
+     </ol>
+     <font color="blue"> <H3 ALIGN=CENTER>Брестская область</H3></font>
+     <ol type="i">
+         <li style="text-align: left; margin-left: 40px;">Брест</li>
+     <li style="text-align: left; margin-left: 40px;">Пинск</li>
+     </ol>
+     <font color="blue"> <H3 ALIGN=CENTER>Гомельская область</H3></font>
+     <ul type="SQUARE">
+     <li style="text-align: left; margin-left: 40px;">Гомель</li>
+     <li style="text-align: left; margin-left: 40px;">Мозырь</li>
+     </ul>
+     </div>
+ </body>
+ </html>
