--- a/oformleniespiskov.html
+++ b/oformleniespiskov.html
@@ -175,3 +175,32 @@
      </div>
  </body>
  </html>
+
+ <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>7</title>
+    <style>
+        .n7{
+    background-color: #b39494;
+    width: 300px; margin-left: auto; margin-right: auto;
+}
+    </style>
+</head>
+<body>
+<div class="n7">
+    
+    <font color="A0522D"> <H2 ALIGN=CENTER>Список литературы</H2></font>
+    <ol>
+<li style="text-align: left;"><font color="red">Л.Н.Толстой</font> «Война и мир»</li>
+<li style="text-align: left;"><font color="red">Л.Н.Толстой</font> «Анна Каренина»</li>
+<li style="text-align: left;"><font color="green">А.С.Пушкин</font> «Капитанская дочка»</li>
+<li style="text-align: left;"><font color="green">А.С.Пушкин</font> «Евгений Онегин»</li>
+<li style="text-align: left;"><font color="green">А.С.Пушкин</font> «Маленькие трагедии»</li>
+<li style="text-align: left;"><font color="blue">М.Ю.Лермонтов</font> «Мцыри»</li>
+    </ol>
+</div>
+</body>
+</html>
