--- a/oformleniespiskov.html
+++ b/oformleniespiskov.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<h2>Задание 1</h2>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -18,6 +19,7 @@
 </html>
 
 <!DOCTYPE html>
+<h2>Задание 2</h2>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -47,6 +49,7 @@
 </html>
 
 <!DOCTYPE html>
+<h2>Задание 3</h2>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -54,7 +57,6 @@
     <title>Document</title>
 </head>
 <body>
-<p>Задание 3</p>
     <h1 align="center"><font color="00008B">Расписание уроков</font></h1>
 <ol align="center"> 
     <div style="text-align: center; width: 100%">
@@ -70,6 +72,7 @@
 </html>
 
 <!DOCTYPE html>
+<h2>Задание 4</h2>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -102,6 +105,7 @@
 
 
 <!DOCTYPE html>
+<h2>Задание 5</h2>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -133,6 +137,7 @@
  </html
         
  <!DOCTYPE html>
+ <h2>Задание 6</h2>
  <html lang="en">
  <head>
      <meta charset="UTF-8">
@@ -177,6 +182,7 @@
  </html>
 
  <!DOCTYPE html>
+ <h2>Задание 7</h2>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -202,5 +208,49 @@
 <li style="text-align: left;"><font color="blue">М.Ю.Лермонтов</font> «Мцыри»</li>
     </ol>
 </div>
+</body>
+</html>
+
+<!DOCTYPE html>
+<h2>Задание 8</h2>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <Style>
+        .n8{
+    background-color: #FFDEAD;
+    width: 300px; margin-left: auto; margin-right: auto;
+}
+    </Style>
+</head>
+<body>
+    <div class="n8">
+        <font color="blue"> <H2 ALIGN=CENTER>Хищники</H2></font>
+        <ol style="color: red;">
+            <li style="text-align: left;"><i>Медвежьи</i></li>
+                <ul style="color: green;" type="DISC"> 
+                    <li style="text-align: left;">Медведи</li>
+                        <ul style="color: black;" type="CIRCLE">
+                            <li style="text-align: left;">Бурые медведь, Белый медведь</li>
+                        </ul>
+                        <li style="text-align: left;">Панды</li>
+                        <ul style="color: black;" type="CIRCLE">
+                            <li style="text-align: left;">Большая панда, Малая панда</li>
+                      </ul>
+                </ul>
+            <li style="text-align: left;"><i>Собачьи</i></li>
+            <ul style="color: green;" type="DISC"> 
+                <li style="text-align: left;">Волки</li>
+                    <ul style="color: black;" type="CIRCLE">
+                        <li style="text-align: left;">Шакал,Красный волк</li>
+                    </ul>
+                    <li style="text-align: left;">Лисы</li>
+                    <ul style="color: black;" type="CIRCLE">
+                        <li style="text-align: left;">Лиса рыжая,Фенек</li>
+                  </ul>
+            </ul>
+        </ol>
 </body>
 </html>
