--- a/ispoilsovaniegraphiki.html
+++ b/ispoilsovaniegraphiki.html
@@ -14,3 +14,18 @@
 <hr align="center" size="2" width="100" color="blue">
 </body>
 </html>
+
+<!DOCTYPE html>
+<h2>Задание 2</h2>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Графика </title>
+</head>
+<body>
+    <h1 align="center">Рисунки в HTML-документах</h1>
+    <img src="picture.jpg" alt="Это рисунок" height="200" width="150" align="right" border="4">
+</body>
+</html>
+
