--- a/ispoilsovaniegraphiki.html
+++ b/ispoilsovaniegraphiki.html
@@ -29,3 +29,15 @@
 </body>
 </html>
 
+<!DOCTYPE html>
+<h2>Задание 3</h2>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>3</title>
+</head>
+<body>
+    <HR ALIGN=LEFT SIZE=100px WIDTH=100px COLOR=red> 
+</body>
+</html>
