--- a/ispoilsovaniegraphiki.html
+++ b/ispoilsovaniegraphiki.html
@@ -41,3 +41,17 @@
     <HR ALIGN=LEFT SIZE=100px WIDTH=100px COLOR=red> 
 </body>
 </html>
+
+
+<!DOCTYPE html>
+<h1>Задание 4</h1>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title></title>
+</head>
+<body>
+    <HR SIZE=200 WIDTH=5 COLOR=blue>
+</body>
+</html>
