--- a/ispoilsovaniegraphiki.html
+++ b/ispoilsovaniegraphiki.html
@@ -55,3 +55,22 @@
     <HR SIZE=200 WIDTH=5 COLOR=blue>
 </body>
 </html>
+
+<!DOCTYPE html>
+<h1>Задание 5</h1>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>5</title>
+</head>
+<body>
+    <HR ALIGN=CENTER SIZE=10 WIDTH=100% COLOR=Boston University Red> 
+        <HR ALIGN=CENTER SIZE=10 WIDTH=100% COLOR=red> 
+            <HR ALIGN=CENTER SIZE=10 WIDTH=100% COLOR=yellow> 
+            <HR ALIGN=CENTER SIZE=10 WIDTH=100% COLOR=green> 
+            <HR ALIGN=CENTER SIZE=10 WIDTH=100% COLOR=Turquoise> 
+            <HR ALIGN=CENTER SIZE=10 WIDTH=100% COLOR=blue> 
+            <HR ALIGN=CENTER SIZE=10 WIDTH=100% COLOR=Eggplant> 
+</body>
+</html>
