--- a/ispoilsovaniegraphiki.html
+++ b/ispoilsovaniegraphiki.html
@@ -83,7 +83,8 @@
     <title>6</title>
 </head>
 <body>
-    <p style="width: 585px; display: flex"><img src="https://avatars.mds.yandex.net/get-mpic/12418417/2a0000018d83f5039b14f7e4a2651300eca3/orig" alt="Виктория" style="height: 85px;">  
+    <h4 style="color: brown;"class="cl"><b>Живой кефирный тибетский гриб</b></h4>
+    <p style="width: 585px; display: flex"><img src="https://avatars.mds.yandex.net/get-mpic/12418417/2a0000018d83f5039b14f7e4a2651300eca3/orig" alt="клубника" style="height: 85px;">  
         Полученный с его помощью кефир является уникальным лечебным препаратом, 
         помогающим бороться с аллергией, гипертонией, язвенной болезнью желудка и двенадцатиперстной кишки. 
         Его употребление нормализует кишечную микрофлору. Кефир, получаемый в результате жизнедеятельности гриба, 
@@ -125,3 +126,21 @@
 </body>
 </html>
 
+<!DOCTYPE html>
+<H1>Задание 8</H1>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>8</title>
+</head>
+<body>
+    <div style=" border: 1px solid black; width: fit-content;margin-left: 35%;background-image:url(https://avatars.mds.yandex.net/get-mpic/1669769/img_id3987157000369453748.jpeg/orig);width: 600px;height: 600px;"> 
+        <h1 style="text-align: center;color: #00008B;">Летающий ангел</h1>  
+        <marquee behavior="alternate" direction=""><font color="ff0000"><img src="angel.jpg" HEIGHT=100 WIDTH=100 alt="Ангел"></font></marquee> 
+        <p>Используя возможности HTML-языка можно заставить ангела  летать по стрнице и не только ангела...</p> 
+     <marquee behavior="" direction="down"><img src="lunajpg.jpg" HEIGHT=100 WIDTH=100 alt="Земля"></marquee> 
+      
+     </div> 
+</body>
+</html>
