--- a/ispoilsovaniegraphiki.html
+++ b/ispoilsovaniegraphiki.html
@@ -144,3 +144,18 @@
      </div> 
 </body>
 </html>
+
+<!DOCTYPE html>
+<h1>Задание 9</h1>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>9</title>
+</head>
+<body>
+    <img align="center" src="Рисунок1.png"  class="printer" title="принтер">
+<img align="center" src="v.png"  class="clava i monitor" title="Клавиатура и монитор">
+<img align="center" src="Рисунок2.png" class="blok" title="Системник" >
+</body>
+</html>
