--- a/ispoilsovaniegraphiki.html
+++ b/ispoilsovaniegraphiki.html
@@ -159,3 +159,20 @@
 <img align="center" src="Рисунок2.png" class="blok" title="Системник" >
 </body>
 </html>
+
+<!DOCTYPE html>
+<h1>Задание 10</h1>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>10</title>
+</head>
+<body>
+    <div style=" position: relative;width: 523px;height: 484px;border: 1px solid black;;margin-left: 39%;background-color: gold;"> 
+        <img src="https://avatars.mds.yandex.net/i?id=1f8e5fc8a43dc1471e8aab45533304f0_l-9652646-images-thumbs&n=13" style=" width: 300px;height: 200px;position: absolute;margin-top: 20%;margin-left: 20%;;border: 20px solid rgb(31, 3, 3);" alt=""> 
+        <img src="https://i.pinimg.com/736x/20/99/72/209972d71429cb168dcb1dea9d904b4e.jpg"  style=" width: 300px;height: 200px;border: 20px solid rgb(11, 90, 17);" alt=""> 
+        <img src="https://i.pinimg.com/736x/89/c8/d8/89c8d81c95badfb6fb0d89195263fba7.jpg"  style=" width: 300px;height: 200px;border: 20px solid rgb(140, 32, 212);margin-left: 35%;position: relative;" alt=""> 
+        </div>
+</body>
+</html>
